--- a/index.html
+++ b/index.html
@@ -1,23 +1,32 @@
 <html>
-<canvas id="game-canvas"></canvas>
+  <head>
+    <title>Potteroids</title>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
 
-<script src = "./lib/utils.js" ></script>
-<script src = "./lib/movingObject.js" ></script>
-<script src = "./lib/asteroid.js" ></script>
-<script src = "./lib/game.js" ></script>
-<script src = "./lib/gameView.js" ></script>
-<script src = "./lib/ship.js" ></script>
-<script src="./lib/keymaster.js"></script>
-<script src = "./lib/bullet.js" ></script>
+  <body>
+    <div class="game-container">
+      <canvas id="game-canvas"></canvas>
+    <div>
+    <script src = "./lib/utils.js" ></script>
+    <script src = "./lib/movingObject.js" ></script>
+    <script src = "./lib/asteroid.js" ></script>
+    <script src = "./lib/game.js" ></script>
+    <script src = "./lib/gameView.js" ></script>
+    <script src = "./lib/ship.js" ></script>
+    <script src="./lib/keymaster.js"></script>
+    <script src = "./lib/bullet.js" ></script>
 
-<script>
-  var canvas = document.getElementById("game-canvas");
-  var ctx = canvas.getContext("2d");
-  canvas.width = Asteroids.Game.WIDTH;
-  canvas.height = Asteroids.Game.HEIGHT;
-  var game = new Asteroids.Game(Asteroids.Game.WIDTH, Asteroids.Game.HEIGHT, 4);
-  var view = new Asteroids.GameView(game, ctx);
-  view.start();
-</script>
+    <script>
+      var canvas = document.getElementById("game-canvas");
+      var ctx = canvas.getContext("2d");
+      canvas.width = Asteroids.Game.WIDTH;
+      canvas.height = Asteroids.Game.HEIGHT;
+      var game = new Asteroids.Game(Asteroids.Game.WIDTH, Asteroids.Game.HEIGHT, 4);
+      var view = new Asteroids.GameView(game, ctx);
+      view.start();
+    </script>
+
+  </body>
 
 </html>
