--- a/index.html
+++ b/index.html
@@ -5,9 +5,17 @@
   </head>
 
   <body>
-    <div class="game-container">
+    <div class="game-content">
       <canvas id="game-canvas"></canvas>
-    <div>
+    </div>
+
+    <audio id="shoot" src="./lib/shoot.wav"></audio>
+    <audio id="explode" src="./lib/explode.wav"></audio>
+    <audio id="game-music" controls>
+      <source src="./lib/game.mp3" type="audio/mpeg">
+    </audio>
+
+
     <script src = "./lib/utils.js" ></script>
     <script src = "./lib/movingObject.js" ></script>
     <script src = "./lib/asteroid.js" ></script>
